deploy: 5f563ef584bebf4f441d2bd5834ec21fb29a4173

--- a/extend/app.html
+++ b/extend/app.html
@@ -319,7 +319,7 @@ The app has been optimized for speed, providing instant access to stock knowledg
 
   <p><span class="fab fa-android"></span> <a href="https://play.google.com/store/apps/details?id=inventree.inventree_app">Android Play Store</a>.</p>
 
-  <p><span class="fab fa-apple"></span> <a href="https://apps.apple.com/au/app/inventree/id1581731101#?platform=iphone">Apple App Store</a></p>
+  <p><span class="fab fa-apple"></span> <a href="https://apps.apple.com/au/app/inventree/id1581731101?platform=iphone">Apple App Store</a></p>
 
   <h3 id="documentation">Documentation</h3>
 
@@ -338,10 +338,10 @@ The app has been optimized for speed, providing instant access to stock knowledg
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
