--- a/news.html
+++ b/news.html
@@ -60,7 +60,7 @@
     </div>
 </header>   <section class="cm-gray-2 body-font">
     <div class="pt-3 pb-1 section-container">
-      <h1 class="header-text title-font mb-4 cm-gray-2 flex items-end">InvenTree News<a href="/news/feed.atom" alr="Atom feed" class="ml-3 cm-gray-3"><img class="h-5 w-5" src="/assets/rss.svg"></a>
+      <h1 class="header-text title-font mb-4 cm-gray-2 flex items-end">InvenTree News<a href="/news/feed.atom" alr="Atom feed" class="ml-3 cm-gray-3"><img class="h-5 w-5" src="/assets/rss.svg" alt="RSS symbol"></a>
 </h1>
       <div class="flex flex-wrap">
 
@@ -118,10 +118,10 @@
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
