--- a/newsletter.html
+++ b/newsletter.html
@@ -61,7 +61,7 @@
 </header> <div class="flex justify-around justify-center">
     <div>
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+<link href="https://cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
@@ -142,7 +142,7 @@
         <div class="optionalParent">
             <div class="clear foot">
                 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                <p class="brandingLogo"><a href="http://eepurl.com/h5Mg8D" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                <p class="brandingLogo"><a href="https://eepurl.com/h5Mg8D" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg" alt="Mailchimp logo"></a></p>
             </div>
         </div>
     </div>
@@ -160,10 +160,10 @@
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
