--- a/support.html
+++ b/support.html
@@ -74,7 +74,7 @@ Private questions (via DM, email, etc.) are generally not answered, use the publ
   <li>Suggest the feature on the issue tracker as a <a href="https://github.com/inventree/InvenTree/issues/new?template=feature_request.yaml">Feature Request</a>
 </li>
   <li>Implement the feature yourself, and contribute back to the project. InvenTree developers will happily help you work through any issues.</li>
-  <li>Create a <a href="/extend/plugin/index.md">plugin</a>
+  <li>Create a <a href="/extend/plugin/">plugin</a>
 </li>
   <li>Request a paid customisation</li>
 </ul>
@@ -92,10 +92,10 @@ Feel free to reach out to <code class="language-plaintext highlighter-rouge">sup
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
