--- a/deploy.html
+++ b/deploy.html
@@ -79,11 +79,11 @@
 
 <h3 id="cloud">Cloud</h3>
 
-<p>A member of the team provides a <a href="https://marketplace.digitalocean.com/apps/inventree?refcode=d6172576d014&amp;action=deploy">1-click app for InvenTree</a> on the DigitalOcean marketplace.</p>
+<p>A member of the team provides a <a href="https://marketplace.digitalocean.com/apps/inventree?refcode=d6172576d014">1-click app for InvenTree</a> on the DigitalOcean marketplace.</p>
 
 <h3 id="other-options">Other Options</h3>
 
-<p>The core InvenTree server is built using the widely used python-based framework <a href="https://djangoproject.com/">Django</a>. Therefore there are  deployment methods for nearly all plattforms and architectures. If you want to read more about InvenTree’s structure and a typical installation read the <a href="../contribute/code/architecture">architecture overview</a>.</p>
+<p>The core InvenTree server is built using the widely used python-based framework <a href="https://djangoproject.com/">Django</a>. Therefore there are  deployment methods for nearly all plattforms and architectures.</p>
 
 </article>
 
@@ -94,10 +94,10 @@
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
