--- a/use/business.html
+++ b/use/business.html
@@ -89,7 +89,7 @@
     <div class="section-container">
       <div class="flex flex-wrap w-full mb-4">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-          <a class="anchor" id="business"></a>
+          <div class="anchor" id="business"></div>
           <div class="inline-flex items-center">
             <h1 class="header-text title-font mb-2 cm-gray-1">For Business</h1>
             
@@ -222,10 +222,10 @@
         <footer class="cm-gray-2 body-font">
   <div class="container px-5 pt-8 mx-auto flex md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
+      <div class="flex title-font font-medium items-center md:justify-start justify-center cm-gray-1">
         <img src="/assets/logo.png" alt="logo" height="32" width="32" class="h-8">
         <span class="ml-3 text-xl">InvenTree</span>
-      </a>
+      </div>
       <p class="mt-2 text-sm cm-gray-3">Intuitive Inventory Management</p>
     </div>
 
