deploy: 12bc778efe757fb098fc9376a863b90c1a6a013e

--- a/about/team.html
+++ b/about/team.html
@@ -102,6 +102,15 @@
         </span>
     </p>
 
+    <h4>wolflu05</h4>
+    <p>Lukas is a German student who likes developing, and building electronics. He focuses on plugin development.
+        <span class="inline-flex">
+        
+            <a href="https://github.com/wolflu05" alt="learn more">GitHub</a>
+        
+        </span>
+    </p>
+
 
 <h3>Contributors</h3>
 <p>ToDo / Looking for suggestions.</p>
