deploy: 8033de4407ed1c33dfcafe1657fad3a7a139414d

--- a/demo.html
+++ b/demo.html
@@ -62,7 +62,7 @@
     
     <h2>InvenTree Demo</h2>
     
-    <p>Want to take InvenTree for a spin? A working demo of InvenTree is available online at &lt;a href=”https://demo.inventree.org”data-umami-event=”demo”&gt;https://demo.inventree.org&lt;/a&gt;</p>
+    <p>Want to take InvenTree for a spin? A working demo of InvenTree is available online at <a href="https://demo.inventree.org" data-umami-event="demo">https://demo.inventree.org</a></p>
 
 <h3 id="login-details">Login Details</h3>
 
@@ -88,19 +88,19 @@
       <td>reader</td>
       <td>readonly</td>
       <td>Can view all pages but cannot create, edit or delete database records</td>
-      <td>&lt;a href=”https://demo.inventree.org/accounts/login/?login=reader&amp;password=readonly”data-umami-event=”demo-reader”&gt;log in&lt;/a&gt;</td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=reader&amp;password=readonly" data-umami-event="demo-reader">log in</a></td>
     </tr>
     <tr>
       <td>engineer</td>
       <td>partsonly</td>
       <td>Can manage parts, view stock, but no access to purchase orders or sales orders</td>
-      <td>&lt;a href=”https://demo.inventree.org/accounts/login/?login=engineer&amp;password=partsonly”data-umami-event=”demo-engineer”&gt;log in&lt;/a&gt;</td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=engineer&amp;password=partsonly" data-umami-event="demo-engineer">log in</a></td>
     </tr>
     <tr>
       <td>admin</td>
       <td>inventree</td>
       <td>Superuser account, access all areas plus administrator actions</td>
-      <td>&lt;a href=”https://demo.inventree.org/accounts/login/?login=admin&amp;password=inventree”data-umami-event=”demo-admin”&gt;log in&lt;/a&gt;</td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=admin&amp;password=inventree" data-umami-event="demo-admin">log in</a></td>
     </tr>
   </tbody>
 </table>
