deploy: 22821301b966e07ac50cd18704cbf4defbd8fbd0

--- a/publishers.html
+++ b/publishers.html
@@ -78,6 +78,14 @@
     </li>
   
     <li>
+      <h2><a href="/lippoliv">Oliver Lippert</a></h2>
+      <h3></h3>
+      <p></p>
+<p>With over 15 years of experience and big big passion I learned to take care about the details. They build up to the big picture we have in mind. I’m planning ahead &amp; act early to prevent a big bang.</p>
+
+    </li>
+  
+    <li>
       <h2><a href="/matmair">Matthias Mair</a></h2>
       <h3></h3>
       <p></p>
