deploy: a03b53267786136029a951d3ebf7409d667eab97

--- a/extend/integrate/index.html
+++ b/extend/integrate/index.html
@@ -81,6 +81,11 @@
       <td>Tool for automating creation of InvenTree data from external systems such as DigiKey</td>
     </tr>
     <tr>
+      <td><a href="https://github.com/30350n/inventree_part_import">InvenTree Part Import</a></td>
+      <td><a href="https://github.com/30350n">@30350n</a></td>
+      <td>CLI to import parts from suppliers like DigiKey, LCSC, Mouser, etc. to InvenTree</td>
+    </tr>
+    <tr>
       <td><a href="https://github.com/rgilham/PK2InvenTree">PK2InvenTree</a></td>
       <td><a href="https://github.com/rgilham">@rgilham</a></td>
       <td>An open-source tool for migrating an existing <a href="https://github.com/partkeepr/PartKeepr">PartKeepr</a> database to InvenTree</td>
