deploy: fe6f2febc1336b0bdd42c8b2d1f5675a71df5c22

--- a/deploy.html
+++ b/deploy.html
@@ -73,6 +73,10 @@
 
 <p>Refer to the <a href="https://docs.inventree.org/en/latest/start/docker/">docker installation guide</a> for more information</p>
 
+<h3 id="appjail">AppJail</h3>
+
+<p>InvenTree can be installed on FreeBSD using AppJail. An <a href="https://github.com/AppJail-makejails/inventree">AppJail Makejail</a> is provided with regular updates.</p>
+
 <h3 id="manual-bare-metal-install">Manual Bare Metal Install</h3>
 
 <p>A <a href="https://docs.inventree.org/en/latest/start/intro/">bare metal installation guide</a> is provided for users who are looking for a low-level or custom installation.</p>
