--- a/about/index.html
+++ b/about/index.html
@@ -69,9 +69,9 @@ It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply
 <p>We are open source all the way. Webserver, Docs, App and Website are MIT licensed. Please check the <a href="https://github.com/inventree/InvenTree/">source directory</a> if you want to look at the source code.</p>
 
 <h3 id="open-governance">Open governance</h3>
-<p>The roadmap for InvenTree is created by the <a href="team">contributors</a>. There is no solid roadmap but the team has general areas of interest and <a href="https://github.com/inventree/InvenTree/milestones">milestones</a> to provide an outlook to what is to come. As this project is done in spare/free time there is no set release timeline.</p>
+<p>The roadmap for InvenTree is created by the <a href="team">contributors</a>. There is no solid roadmap but the team has general areas of interest and <a href="https://github.com/inventree/InvenTree/milestones">milestones</a> to provide an outlook to what is to come. As this project is done in spare/free time; there is no set release timeline.</p>
 
-<p>Big ticket iteams that have the interest of the maintainer or a dedicated dev get the label <code class="language-plaintext highlighter-rouge">roadmap</code> - those projects are likely to be worked on in the assigned milestones. <a href="https://github.com/inventree/InvenTree/issues?q=is%3Aissue+is%3Aopen+label%3Aroadmap">Take a peak</a></p>
+<p>Big ticket items that have the interest of the maintainer or a dedicated developer get the label <code class="language-plaintext highlighter-rouge">roadmap</code>: those projects are likely to be worked on in the assigned milestones. <a href="https://github.com/inventree/InvenTree/issues?q=is%3Aissue+is%3Aopen+label%3Aroadmap">Take a peek</a>!</p>
 
 <h3 id="goals">Goals</h3>
 
@@ -93,7 +93,7 @@ It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply
 
 <p>The InvenTree project is driven by the support of its developers and users. We all want to see the project grow and be embraced by others, who may in turn be inspired to contribute themselves.</p>
 
-<p>There is no inherent monetary interest but if you would like to <a href="/contribute.html">support the project</a> - we apprecicate it.</p>
+<p>There is no inherent monetary interest but if you would like to <a href="/contribute.html">support the project</a> - we appreciate it.</p>
 
 </article>
 
