deploy: 8c3a8849d284749235e2088613cf6bad090faa9c

--- a/alternatives/index.html
+++ b/alternatives/index.html
@@ -62,7 +62,7 @@
     
     <h2>Alternatives</h2>
     
-    <p>InvenTree is by far not the only software for managing ‘things’<tm>, there are even a few in the OSS space that adress all your possible needs. We have compiled a list with (more or less) competitors and why they might be a better fit.</tm></p>
+    <p>InvenTree is by far not the only software for managing ‘things’™, there are even a few in the OSS space that may address all your possible needs. We have compiled a list with several competitors, and why they might be a better fit.</p>
 
 <p>PLMs:</p>
 <ul>
@@ -74,7 +74,7 @@
 <a href="https://bomist.com/">Bomist</a> <code class="language-plaintext highlighter-rouge">for profit</code> free version with limited function</li>
 </ul>
 
-<p>Asset Managemnt:</p>
+<p>Asset Management:</p>
 <ul>
   <li>
 <a href="https://snipeitapp.com/">SnipeIt</a> - battleproven stable in the PHP scene</li>
