--- a/contribute.html
+++ b/contribute.html
@@ -121,7 +121,7 @@ Reporting bugs is critical to improving the software. If you are able and willin
 
 <p>New users tend to ask questions in the <a href="https://github.com/inventree/InvenTree/issues">issues</a> or <a href="https://github.com/inventree/InvenTree/discussions">discussions</a>. Be there, answer questions or <a href="https://github.com/inventree/InvenTree/discussions/categories/show-and-tell">show off</a> your projects. Together we learn new things and get inspired for our usage.</p>
 
-<p>Our offical channels are:</p>
+<p>Our official channels are:</p>
 <ul>
   <li>Twitter <a href="https://twitter.com/inventreedb">@inventreedb</a>
 </li>
