--- a/extend/app.html
+++ b/extend/app.html
@@ -323,7 +323,7 @@ The app has been optimized for speed, providing instant access to stock knowledg
   <p>Core app features include:</p>
 
   <ul>
-    <li>View and edit part and stock information with a blazingly fast interface</li>
+    <li>View and edit part and stock information in a blazing fast interface</li>
     <li>Perform stock control actions on the go</li>
     <li>Barcode integrations simplify stock operations</li>
     <li>Receive purchase orders and check in stock items</li>
