--- a/extend/index.html
+++ b/extend/index.html
@@ -62,14 +62,14 @@
     
     <h2>Ecosystem</h2>
     
-    <p>InvenTree is designeds to be part of a larger system of tools to support both hobbyists and SMEs with their mangment needs.</p>
+    <p>InvenTree is designed to be part of a larger system of tools to support both hobbyists and SMEs with their management needs.</p>
 
 <ul>
   <li><a href="plugin">Plugins</a></li>
   <li><a href="api">API</a></li>
   <li>
 <a href="integrate">Integrate</a> into other tools</li>
-  <li>PK2InvenTree for <a href="https://github.com/rgilham/PK2InvenTree">migrating from PartKeepr to InvenTreen</a>
+  <li>PK2InvenTree for <a href="https://github.com/rgilham/PK2InvenTree">migrating from PartKeepr to InvenTree</a>
 </li>
   <li>Python <a href="https://docs.inventree.org/en/latest/api/python/python/">package</a>
 </li>
