--- a/support.html
+++ b/support.html
@@ -62,11 +62,12 @@
     
     <h2>Get Support</h2>
     
-    <p>As an open source project we offer a <a href="https://github.com/inventree/InvenTree">public issue tracker</a> and <a href="https://docs.inventree.org">public documentation</a>.</p>
+    <p>As an open-source project we offer a <a href="https://github.com/inventree/InvenTree">public issue tracker</a> and <a href="https://docs.inventree.org">public documentation</a>.</p>
 
 <h2 id="general-questions">General Questions</h2>
-<p>The core team answers questions in the issue tracker of in <a href="https://github.com/inventree/InvenTree/discussions">discussions</a> when they find time.<br>
-Private questions (via DM, email, etc.) are generally not answered, use the public forums.</p>
+<p>The core team answers questions in the issue tracker or in <a href="https://github.com/inventree/InvenTree/discussions">discussions</a> when they find time.</p>
+
+<p>Private questions (via DM, email, etc.) are generally not answered - please use the public forums.</p>
 
 <h2 id="custom-features">Custom Features</h2>
 <p>If you require a custom feature you can either:</p>
@@ -80,8 +81,9 @@ Private questions (via DM, email, etc.) are generally not answered, use the publ
 </ul>
 
 <h2 id="paid-customisation--support">Paid Customisation / Support</h2>
-<p>If you use InvenTree for your business and require a support contract or want to fast track a feature request we have a list of developers and businesses willing to help out.
-Feel free to reach out to <code class="language-plaintext highlighter-rouge">support &lt;AT&gt; inventree &lt;DOT&gt; ORG</code> - we will redirect you to a suitable contact.</p>
+<p>If you use InvenTree for your business and require a support contract or want to fast track a feature request, we have a list of developers and businesses willing to help out.</p>
+
+<p>Feel free to reach out to <code class="language-plaintext highlighter-rouge">support &lt;AT&gt; inventree &lt;DOT&gt; ORG</code> - we will redirect you to a suitable contact.</p>
 
 </article>
 
