--- a/extend/plugin/index.html
+++ b/extend/plugin/index.html
@@ -62,8 +62,9 @@
     
     <h2>Plugins</h2>
     
-    <p>We supply core-dev and community built plugins to get you started with extending InvenTree’s functionality. Plugins can hook into many parts of the UI, buisness logic and webserver.
-We expose some internal python APIs to speed up your development and keep the instance running while you discover the possibilities.</p>
+    <p>We supply core-dev and community built plugins to get you started with extending InvenTree’s functionality. Plugins can hook into many parts of the UI, buisness logic and webserver.</p>
+
+<p>We expose some internal Python APIs to speed up your development and keep the instance running while you discover the possibilities.</p>
 
 <p>You can read more about the plugin architecture, including information on developing new plugins, on our <a href="https://docs.inventree.org/en/latest/extend/plugins/">documentation</a></p>
 
