--- a/plugins.html
+++ b/plugins.html
@@ -62,7 +62,7 @@
   <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin List</h1>
   <p class="content">
     InvenTree is a modular application and can be extended with plugins. This list is a collection of plugins that have been developed by the community.
-    Beeing on this list does not mean that the plugin is officially supported by the InvenTree core team. We also do not check for security, privacy or performance issues or compatibility with the latest InvenTree version.
+    Being on this list does not mean that the plugin is officially supported by the InvenTree core team. We also do not check for security, privacy or performance issues or compatibility with the latest InvenTree version.
     <br><br>
     You can also browse for plugins by <a href="/plugins/tags/">tags</a> or <a href="/plugins/categories/">categories</a>
   </p>
