deploy: d241be133b2ce80f7bda289afcdbba68187fbe69

--- a/contribute.html
+++ b/contribute.html
@@ -124,7 +124,7 @@ Reporting bugs is critical to improving the software. If you are able and willin
 <ul>
   <li>Twitter <a href="https://twitter.com/inventreedb">@inventreedb</a>
 </li>
-  <li>Reddit <a href="https://www.reddit.com/r/InvenTree/">r/InvenTree</a>
+  <li>Reddit <a href="https://www.reddit.com/r/inventree/">r/InvenTree</a>
 </li>
 </ul>
 
