deploy: cee0bc481ea5ebd147fcd0afc5b00ca85fd1ff6a

--- a/contribute.html
+++ b/contribute.html
@@ -79,6 +79,7 @@
 <p>If you or your company uses InvenTree, please consider sponsoring the project to show your support. Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!</p>
 
 <ul>
+  <li><a href="https://polar.sh/inventree">Polar.sh</a></li>
   <li><a href="https://github.com/sponsors/inventree">GitHub</a></li>
   <li><a href="https://www.patreon.com/inventree">Patreon</a></li>
   <li><a href="https://ko-fi.com/inventree">Ko-fi</a></li>
