deploy: a690202267dfcc3758d7ecc5b5b43623cb7384c4

--- a/publishers.html
+++ b/publishers.html
@@ -62,6 +62,14 @@
 <ul>
   
     <li>
+      <h2><a href="/LavissaWoW">Nichlas W.</a></h2>
+      <h3></h3>
+      <p></p>
+<p>Yes, WoW is for World of Warcraft</p>
+
+    </li>
+  
+    <li>
       <h2><a href="/SergeoLacruz">Michael</a></h2>
       <h3></h3>
       <p></p>
