deploy: 9b2899fa0649d3f471eb0fe9bff8ac123588026d

--- a/use/education.html
+++ b/use/education.html
@@ -300,10 +300,14 @@
         <a href="https://twitter.com/inventreedb" alt="Twitter" class="ml-3 cm-gray-3">
           <img class="h-5 w-5" alt="Twitter logo" src="/assets/twitter.svg">
         </a>
+        <a href="https://chaos.social/@InvenTree" rel="me" alt="Mastodon" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Mastodon logo" src="/assets/mastodon.svg">
+        </a>
       </span>
     </div>
   </div>
 </footer>
+
     </div>
 </body>
 
