--- a/about/index.html
+++ b/about/index.html
@@ -184,10 +184,14 @@ It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply
         <a href="https://twitter.com/inventreedb" alt="Twitter" class="ml-3 cm-gray-3">
           <img class="h-5 w-5" alt="Twitter logo" src="/assets/twitter.svg">
         </a>
+        <a href="https://chaos.social/@InvenTree" rel="me" alt="Mastodon" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Mastodon logo" src="/assets/mastodon.svg">
+        </a>
       </span>
     </div>
   </div>
 </footer>
+
     </div>
 </body>
 
