--- a/demo.html
+++ b/demo.html
@@ -208,10 +208,14 @@ During the update period, the demo server may be inaccessible for a few minutes.
         <a href="https://twitter.com/inventreedb" alt="Twitter" class="ml-3 cm-gray-3">
           <img class="h-5 w-5" alt="Twitter logo" src="/assets/twitter.svg">
         </a>
+        <a href="https://chaos.social/@InvenTree" rel="me" alt="Mastodon" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Mastodon logo" src="/assets/mastodon.svg">
+        </a>
       </span>
     </div>
   </div>
 </footer>
+
     </div>
 </body>
 
