deploy: f79f7fa8da1e486e266bb46364fe5d45b80d73e3

--- a/publishers.html
+++ b/publishers.html
@@ -101,6 +101,14 @@
     </li>
   
     <li>
+      <h2><a href="/melektron">melektron</a></h2>
+      <h3></h3>
+      <p></p>
+<p>Juggling with bits and bytes for fun and profit ;) (and also electrons if I feel like it)</p>
+
+    </li>
+  
+    <li>
       <h2><a href="/schrodingersgat">Oliver</a></h2>
       <h3></h3>
       <p></p>
