deploy: ad97166043c5c92a410d16e61a5da531d6e45a7d

--- a/publishers.html
+++ b/publishers.html
@@ -109,6 +109,14 @@
     </li>
   
     <li>
+      <h2><a href="/piramja">Martin P.</a></h2>
+      <h3></h3>
+      <p></p>
+<p>And in the end, we have no choice but to embrace the chaos and laugh about it.</p>
+
+    </li>
+  
+    <li>
       <h2><a href="/schrodingersgat">Oliver</a></h2>
       <h3></h3>
       <p></p>
