deploy: 2ab9ea4608be82e0997535fe2cffc64ffcdf05c4

--- a/extend/app.html
+++ b/extend/app.html
@@ -364,13 +364,21 @@ The app has been optimized for speed, providing instant access to stock knowledg
     <li>Receive purchase orders and check in stock items</li>
   </ul>
 
-  <h3 id="download">Download</h3>
+  <h3 id="installation">Installation</h3>
 
-  <p>The InvenTree app can be downloaded from either the Android or Apple app stores, or accessed via the links below:</p>
+  <p>You can install the app via the following channels:</p>
 
-  <p><span class="fab fa-android"></span> <a href="https://play.google.com/store/apps/details?id=inventree.inventree_app">Android Play Store</a>.</p>
+  <h3 id="google-play-store-android">Google Play Store (Android)</h3>
 
-  <p><span class="fab fa-apple"></span> <a href="https://apps.apple.com/au/app/inventree/id1581731101?platform=iphone">Apple App Store</a></p>
+  <p>Download and install from the <a href="https://play.google.com/store/apps/details?id=inventree.inventree_app&amp;hl=en_AU">Google Play Store</a></p>
+
+  <h3 id="apple-store-ios">Apple Store (iOS)</h3>
+
+  <p>Download and install from the <a href="https://apps.apple.com/au/app/inventree/id1581731101">Apple App Store</a></p>
+
+  <h3 id="direct-download-android">Direct Download (Android)</h3>
+
+  <p>We provide direct downloads for Android users - view our <a href="https://polar.sh/inventree/products/299bf0d5-af88-4e0f-becf-c007ad37ecf2">download page via polar.sh</a></p>
 
   <h3 id="documentation">Documentation</h3>
 
