deploy: ec6eb8f0d385e3f3a7b0485539c71e066330d75e

--- a/deploy.html
+++ b/deploy.html
@@ -78,7 +78,7 @@
 
 <h3 id="manual-bare-metal-install">Manual Bare Metal Install</h3>
 
-<p>A <a href="https://docs.inventree.org/en/stable/start/intro/">bare metal installation guide</a> is provided for users who are looking for a low-level or custom installation.</p>
+<p>A <a href="https://docs.inventree.org/en/stable/start/">bare metal installation guide</a> is provided for users who are looking for a low-level or custom installation.</p>
 
 <h3 id="cloud">Cloud</h3>
 
