--- a/extend/api.html
+++ b/extend/api.html
@@ -70,7 +70,7 @@
   <li>python module</li>
 </ul>
 
-<p>The API is self-documenting. More information is provided in the <a href="https://docs.inventree.org/en/stable/api/api/">documentation</a>.</p>
+<p>The API is self-documenting. More information is provided in the <a href="https://docs.inventree.org/en/stable/api/">documentation</a>.</p>
 
 </article>
 
