--- a/extend/app.html
+++ b/extend/app.html
@@ -384,7 +384,7 @@ The app has been optimized for speed, providing instant access to stock knowledg
 
   <h3 id="documentation">Documentation</h3>
 
-  <p>Mobile app documentation can be found on the <a href="https://docs.inventree.org/en/stable/app/app/">InvenTree documentation site</a>.</p>
+  <p>Mobile app documentation can be found on the <a href="https://docs.inventree.org/en/stable/app/">InvenTree documentation site</a>.</p>
 
   <h3 id="code">Code</h3>
 
