--- a/extend/plugin/index.html
+++ b/extend/plugin/index.html
@@ -65,7 +65,7 @@
 
 <p>We expose some internal Python APIs to speed up your development and keep the instance running while you discover the possibilities.</p>
 
-<p>You can read more about the plugin architecture, including information on developing new plugins, on our <a href="https://docs.inventree.org/en/stable/extend/plugins/">documentation</a></p>
+<p>You can read more about the plugin architecture, including information on developing new plugins, on our <a href="https://docs.inventree.org/en/stable/plugins/">documentation</a></p>
 
 <h3 id="highlights">Highlights</h3>
 
