--- a/extend/plugin/index.html
+++ b/extend/plugin/index.html
@@ -75,11 +75,11 @@
   <li><a href="https://github.com/SergeoLacruz/inventree-zebra-plugin">Zebra</a></li>
 </ul>
 
-<h3 id="plugin-repo">Plugin repo</h3>
+<h3 id="plugins">Plugins</h3>
 
 <p>You can find all tagged plugins on <a href="https://pypi.org/search/?q=inventree-plugin">PyPi</a> and <a href="https://github.com/topics/inventreeplugins">GitHub</a>.</p>
 
-<p>We also offer a <a href="../../plugins.html">plugin repo</a> with a community driven list of plugins. We encourage you to add your own plugins.</p>
+<p>We also offer a <a href="../../plugins.html">plugin repository</a> with a community driven list of plugins. We encourage you to add your own plugins to this list.</p>
 
 </article>
 
