deploy: 72af7aeb592f45042bbe9c502ddb9ba31d9c46c2

--- a/extend/app.html
+++ b/extend/app.html
@@ -396,7 +396,7 @@ The app has been optimized for speed, providing instant access to stock knowledg
 
   <h3 id="direct-download-android">Direct Download (Android)</h3>
 
-  <p>We provide direct downloads for Android users - view our <a href="https://polar.sh/inventree/products/299bf0d5-af88-4e0f-becf-c007ad37ecf2">download page via polar.sh</a></p>
+  <p>We provide direct downloads for Android users - view our <a href="/fund#polar-app">download page via polar</a> to get the latest APK file.</p>
 
   <h3 id="documentation">Documentation</h3>
 
