--- a/contribute.html
+++ b/contribute.html
@@ -79,9 +79,17 @@
 <p>If you or your company uses InvenTree, please consider sponsoring the project to show your support. Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!</p>
 
 <ul>
-  <li><a href="https://polar.sh/inventree">Polar.sh</a></li>
-  <li><a href="https://github.com/sponsors/inventree">GitHub</a></li>
-  <li><a href="https://paypal.me/inventree?locale.x=en_AU">PayPal</a></li>
+  <li><a href="/fund#github-sponsors">GitHub</a></li>
+  <li><a href="/fund#paypal">PayPal</a></li>
+</ul>
+
+<p>You can also support us via:</p>
+
+<ul>
+  <li>A <a href="/fund#polar">one off sponsorship</a>
+</li>
+  <li>A <a href="/fund#polar">recurring sponsorship</a>
+</li>
 </ul>
 
 <p>Financial donations directly support the ongoing development of the InvenTree project. If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!</p>
